tests/baselines/reference/classExpressionES61.errors.txt
tests/cases/conformance/es6/classExpressions/classExpressionES61.ts(1,15): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/conformance/es6/classExpressions/classExpressionES61.ts (1 errors) ====
    var v = class C {};
                  ~
!!! error TS9003: 'class' expressions are not currently supported.